0406 before modify auction-class based CoEAR

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,8 +9,8 @@
             "type": "python",
             "request": "launch",
             // "program": "mofan.py",
-            "program": "main_auction.py",
-            // "program": "PreData.py",
+            // "program": "main_auction.py",
+            "program": "./Dataset/PreData.py",
             "console": "integratedTerminal",
             "args": ["--model", "./Model/psammodel/", "--ReviewDataPath", "./Dataset/Review/", "--MetaDataPath", "./Dataset/Meta/", "--window-size", "5"]
         }
